# OperacoesGrafos

./: .gitignore  Aresta.h  CMakeLists.txt  Grafo.cpp  Grafo.h  Grafos.sln  main.cpp
Grafos/: Aresta.cpp  Aresta.h  Grafo.cpp  Grafo.h  Grafos.cpp  Grafos.vcxproj  Grafos.vcxproj.filters  Hungaro.cpp  Hungaro.h  main.cpp
Grafos/Debug/: Grafos.exe.recipe  Grafos.ilk  vc142.idb
Grafos/Debug/Grafos.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Grafos.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Grafos/x64/Debug/: Grafos.exe.recipe  Grafos.ilk  grafo.obj.enc  main.obj.enc  vc142.idb
Grafos/x64/Debug/Grafos.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Grafos.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Grafos/x64/Release/: Grafos.exe.recipe  Grafos.iobj  Grafos.ipdb
Grafos/x64/Release/Grafos.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Grafos.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
